--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@
 REACT_APP_API_PORT=https://api.bestglobalai.com
 REACT_APP_ORIGINAL_PORT=http://localhost:3000
 # REACT_APP_ORIGINAL_PORT=https://bestglobalai.com
+REACT_APP_RECAPTCHA_SITE_KEY=6LcyYsAqAAAAAIcbupH3puYtGDXaAX5IbeJLwsUL
