extra data added

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # REACT_APP_API_PORT=http://localhost:5001
 REACT_APP_API_PORT=https://api.bestglobalai.com
 REACT_APP_ORIGINAL_PORT=http://localhost:3000
-# REACT_APP_ORIGINAL_PORT=https://bestglobalai.com
+REACT_APP_ORIGINAL_PORT=https://bestglobalai.com
 REACT_APP_RECAPTCHA_SITE_KEY=6LcyYsAqAAAAAIcbupH3puYtGDXaAX5IbeJLwsUL
