--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Landing Page Learning",
+  "name": "Best Global AI - Landing Page Learning Platform",
+  "description": "Learn proven methods to build interactive landing pages that convert with tutorials and AI-powered content creation tools",
   "icons": [
     {
       "src": "favicon.ico",
@@ -21,5 +22,17 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "orientation": "portrait-primary",
+  "scope": "/",
+  "lang": "en",
+  "categories": ["education", "business", "productivity", "utilities"],
+  "screenshots": [
+    {
+      "src": "logo192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "form_factor": "wide"
+    }
+  ]
 }
